--- a/BookRentalSystem/appsettings.json
+++ b/BookRentalSystem/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=CRKRW-RASHEBIS2\\SQLEXPRESS;Database=Book_Rental_System;Trusted_Connection=True;TrustServerCertificate=true;MultipleActiveResultSets=true"
-  } 
+  },
+  "JWT": {
+    "ValidAudience": "https://localhost:7209/",
+    "ValidIssuer": "https://localhost:5000/",
+    "Secret": "JWTAuthenticationSecretBRSILTP"
+  }
 }
