--- a/BookRentalSystem/appsettings.json
+++ b/BookRentalSystem/appsettings.json
@@ -9,6 +9,13 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=CRKRW-RASHEBIS2\\SQLEXPRESS;Database=Book_Rental_System;Trusted_Connection=True;TrustServerCertificate=true;MultipleActiveResultSets=true"
   },
+  "EmailConfiguration": {
+    "From": "bismarasheed95@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "Username": "bismarasheed95@gmail.com",
+    "Password": "fjok uvgl pbqo vdcz"
+  },
   "JWT": {
     "ValidAudience": "https://localhost:7209/",
     "ValidIssuer": "https://localhost:5000/",
